#include "ServerSocketSession.h"
#include <jde/web/server/IWebsocketSession.h>
#include "ServerMock.h"

#define var const auto
namespace Jde::Web::Mock{
	ServerSocketSession::ServerSocketSession( sp<RestStream> stream, beast::flat_buffer&& buffer, TRequestType&& request, tcp::endpoint&& userEndpoint, uint32 connectionIndex )Î¹:
		base{ move(stream), move(buffer), move(request), move(userEndpoint), connectionIndex }
	{}

	Î± ServerSocketSession::OnConnect( SessionPK sessionId, RequestId requestId )Î¹->Server::Sessions::UpsertAwait::Task{
			try{
			auto info = co_await Server::Sessions::UpsertAwait{ ð¢œ("{:x}", sessionId), _userEndpoint.address().to_string(), true };
			Proto::FromServerTransmission t;
			auto m = t.add_messages();
			m->set_request_id( requestId );
			m->set_session_id( sessionId );
			Write( move(t) );
		}
		catch( IException& e ){
			Proto::FromServerTransmission t;
			auto m = t.add_messages();
			m->set_request_id( requestId );
			m->set_exception( e.what() );
			Write( move(t) );
		}
	}

	Î± ServerSocketSession::WriteException( IException&& e )Î¹->void{
		Proto::FromServerTransmission t;
		auto m = t.add_messages();
		m->set_exception( e.what() );
		Write( move(t) );
	}

	Î± ServerSocketSession::SendAck( uint id )Î¹->void{
		LogWrite( ð¢œ("Ack id: {:x}", id), 0 );
		Proto::FromServerTransmission t;
		t.add_messages()->set_ack( id );
		Write( move(t) );
	}


	Î± ServerSocketSession::OnRead( Proto::FromClientTransmission&& messages )Î¹->void{
		for( const Proto::FromClientMessage& m : messages.messages() ){
			using enum Proto::FromClientMessage::ValueCase;
			var requestId = m.request_id();
			switch( m.Value_case() ){
			case kSessionId:
				OnConnect( m.session_id(), requestId );
			break;
			case kEcho:{
				Proto::FromServerTransmission t;
				auto res = t.add_messages();
				res->set_request_id( requestId );
				res->set_echo_text( m.echo() );
				Write( move(t) );
				break;
			}
			case kCloseServerSide:
				Close();
				break;
			case kBadTransmissionServer:
				Stream->Write( "ABCDEFG" );
				break;
			default:
				BREAK;
				break;
			}
		}
	}
	Î± RequestHandler::RunWebsocketSession( sp<RestStream>&& stream, beast::flat_buffer&& buffer, TRequestType req, tcp::endpoint userEndpoint, uint32 connectionIndex )Î¹->void{
		auto pSession = ms<ServerSocketSession>( move(stream), move(buffer), move(req), move(userEndpoint), connectionIndex );
		pSession->Run();
	};

}